grammar.js
    source_file: $ => repeat(
      choice(
        $.psql_statement,
        seq($._statement, ";")
      ),
    ),

    _statement: $ => choice(
      $.psql_statement,
      $.create_function_statement,
      $.drop_function_statement,
      $.create_table_statement,
      $.create_schema_statement,
      $.create_type_statement,
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.grant_statement,
      $.create_trigger_statement,
      $.create_sequence_statement,
      $.create_index_statement,
      $.alter_table_statement,
      $.do_block,
    ),

    _with_query_statement: $ => choice(
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
    ),

    create_table_statement: $ => seq(
      kw("create"), optional($.temporary), optional(kw("unlogged")), kw("table"),
      optional($.if_not_exists), $.identifier,
      "(", commaSep($.create_table_item), ")",
    ),

    create_table_item: $ => choice(
      $.table_column_item,
      $.table_constraint,
    ),

    create_index_statement: $ => seq(
      kw("create"), optional(kw("unique")), kw("index"), optional(kw("concurrently")),
      optional($.if_not_exists), optional($.identifier), kw("on"), $.identifier,
      optional($.index_using),
      "(", commaSep1($.index_col), ")",
      optional($.index_includes),
      optional($.where_filter),
    ),

    index_using: $ => seq(kw("using"), $.identifier),
    index_col: $ => choice(
      seq($.identifier, optional($.index_col_dir), optional($.index_col_nulls)),
      seq("(", $._value_expression, ")", optional($.index_col_dir), optional($.index_col_nulls)),
    ),
    index_col_dir: $ => choice(kw("asc"), kw("desc")),
    index_col_nulls: $ => choice(
      seq(kw("nulls"), kw("first")),
      seq(kw("nulls"), kw("last")),
    ),
    index_includes: $ => seq(kw("include"), $._list_of_identifiers),

    delete_statement: $ => seq(
      optional($.with_query),
      kw("delete"), kw("from"), $.identifier, optional(kw("as")), optional($.identifier),
      optional($.delete_using),
      optional($.where_filter),
      optional(seq(kw("returning"), commaSep1($.select_item))),
      optional($.into),
    ),

    delete_using: $ => seq(kw("using"), commaSep1($.from_item)),

    alter_table_statement: $ => seq(
      kw("alter"), kw("table"), optional($.if_exists), $.identifier,
      $.alter_table_change
    ),

    alter_table_change: $ => choice(
      commaSep1($.alter_table_action),
      $.alter_table_rename_column,
      $.alter_table_rename_constraint,
      $.alter_table_rename_table,
      $.alter_table_change_schema,
    ),

    alter_table_action: $ => choice(
      seq(kw("add"), $.table_constraint),
      seq(kw("add"), optional(kw("column")), optional($.if_not_exists), $.table_column_item),
      seq(kw("drop"), kw("constraint"), optional($.if_exists), $.identifier, optional($.alter_table_fk_ref_action)),
      seq(kw("drop"), optional(kw("column")), optional($.if_exists), $.identifier, optional($.alter_table_fk_ref_action)),
      seq(kw("alter"), optional(kw("column")), $.identifier, optional($.alter_column_action)),
    ),

    alter_column_action: $ => choice(
      seq(kw("set"), kw("default"), $._value_expression),
      seq(kw("drop"), kw("default")),
      seq(kw("set"), kw("not"), kw("null")),
      seq(kw("drop"), kw("not"), kw("null")),
      seq(kw("type"), $.alter_column_type),
      seq(kw("set"), kw("data"), kw("type"), $.alter_column_type),
    ),

    table_constraint: $ => choice(
      seq($.table_constraint_ty, optional($.constraint_when)),
      seq(kw("constraint"), $.identifier, $.table_constraint_ty, optional($.constraint_when)),
    ),

    constraint_when: $ => choice(
      kw("deferrable"),
      seq(kw("deferrable"), kw("initially"), kw("immediate")),
      seq(kw("deferrable"), kw("initially"), kw("deferred")),
    ),

    table_constraint_ty: $ => choice(
      seq(kw("check"), "(", $._value_expression, ")"),
      seq(kw("unique"), $._list_of_identifiers),
      seq(kw("primary"), kw("key"), $._list_of_identifiers),
      seq(kw("foreign"), kw("key"), $._list_of_identifiers, $.constraint_foreign_key),
    ),

    constraint_foreign_key: $ => seq(
      kw("references"), $.identifier,
      optional($._list_of_identifiers), repeat($.fk_action)
    ),

    fk_action: $ => choice(
      seq(kw("on"), kw("delete"), $.fk_ref_action),
      seq(kw("on"), kw("update"), $.fk_ref_action),
    ),

    fk_ref_action: $ => choice(
      seq(kw("no"), kw("action")),
      kw("restrict"),
      kw("cascade"),
      seq(kw("set"), kw("null")),
      seq(kw("set"), kw("default"))
    ),

    alter_column_type: $ => seq(
      $._type,
      optional(seq(kw("using"), $._value_expression)),
    ),
    alter_table_fk_ref_action: $ => choice(kw("restrict"), kw("cascade")),
    table_column_item: $ => seq($.identifier, $._type, repeat($.column_constraint)),

    column_constraint: $ => choice(
      seq(kw("constraint"), $.identifier, $.column_constraint_ty, optional($.constraint_when)),
      seq($.column_constraint_ty, optional($.constraint_when)),
    ),

    column_constraint_ty: $ => choice(
      seq(kw("not"), kw("null")),
      kw("null"),
      seq(kw("check"), "(",  $._value_expression, ")"),
      seq(kw("default"), $._value_expression),
      kw("unique"),
      seq(kw("primary"), kw("key")),
      $.constraint_foreign_key,
    ),

    alter_table_rename_column: $ => seq(
      kw("rename"), optional(kw("column")),
      $.identifier, kw("to"), $.identifier,
    ),
    alter_table_rename_constraint: $ => seq(
      kw("rename"), kw("constraint"),
      $.identifier, kw("to"), $.identifier,
    ),
    alter_table_rename_table: $ => seq(kw("rename"), kw("to"), $.identifier),
    alter_table_change_schema: $ => seq(kw("set"), kw("schema"), $.identifier),


    create_trigger_statement: $ => seq(
      kw("create"), optional(kw("constraint")), kw("trigger"),
      $.identifier,
      $.trigger_when, $.trigger_event,
      kw("on"), $.identifier, optional($.trigger_scope),
      optional($.trigger_cond),
      $.trigger_exec,
    ),

    trigger_when: $ => choice(
      kw("before"),
      kw("after"),
      kw("instead of"),
    ),

    trigger_event: $ => separated1(
      kw("or"), choice(
        kw("insert"),
        kw("update"),
        kw("delete"),
        kw("truncate"),
      ),
    ),

    trigger_scope: $ => seq(
      optional(seq(kw("for"), optional(kw("each")))),
      choice(kw("statement"), kw("row")),
    ),

    trigger_exec: $ => seq(
      kw("execute"),
      optional(choice(kw("procedure"), kw("function"))),
      $.function_call,
    ),

    trigger_cond: $ => seq(
      kw("when"),
      "(", $._value_expression, ")",
    ),

    select_statement: $ => prec.left(seq(
      optional($.with_query),
      kw("select"),
      commaSep($.select_item),
      optional($.into),
      optional($.select_from),
      optional($.select_where),
      optional($.select_group_by),
      optional($.select_having),
      optional($.select_order_by),
      optional($._select_limit_offset),
      optional($.into),
    )),

    with_query: $ => seq(kw("with"), commaSep1($.with_query_item)),
    with_query_item: $ => seq(
      $.identifier,
      optional($._list_of_identifiers),
      kw("as"),
      optional(choice(kw("materialized"), seq(kw("not"), kw("materialized")))),
      "(", $._with_query_statement, ")"
    ),
    into: $ => seq(kw("into"), optional(kw("strict")), commaSep1($.identifier)),
    _select_limit_offset: $ => choice(
      seq($.select_limit, optional($.select_offset)),
      seq($.select_offset, optional($.select_limit)),
    ),
    select_item: $ => seq(
      $._value_expression,
      optional(kw("as")),
      optional($.identifier)
    ),
    select_from: $ => seq(kw("from"), commaSep1($.from_item)),
    from_item: $ => prec.left(seq(
      // TODO(chrde): https://www.postgresql.org/docs/current/sql-select.html
      choice(
        $.from_select,
        $.from_table,
        $.from_function,
      ),
      repeat($.join_item),
    )),
    from_select: $ => seq("(", $.select_statement, ")", optional(kw("as")), $.identifier),
    from_table: $ => seq($.identifier, optional(kw("as")), optional($.identifier)),
    where_filter: $ => seq(kw("where"), $._value_expression),
    temporary: $ => choice(kw("temp"), kw("temporary")),
    if_not_exists: $ => seq(kw("if"), kw("not"), kw("exists")),
    if_exists: $ => seq(kw("if"), kw("exists")),
    _type: $ => seq(
      choice($.predefined_types, $.identifier),
      optional(choice(
        repeat1(seq("[", "]")),
        kw("%rowtype"),
        kw("%type")))
    ),

// predefined_type:
//   | BIGINT { BigInt }
//   | BIT VARYING? l = type_length? { BitVarying(l) }
//   | BOOLEAN { Boolean }
//   | CHAR VARYING? l = type_length? { Char(l) }
//   | CHARACTER VARYING? l = type_length? { Char(l) }
//   | DEC p = precision_param? { Dec(p) }
//   | DECIMAL p = precision_param? { Decimal(p) }
//   | DOUBLE PRECISION { Double }
//   | FLOAT p = precision_param? { Float(p) }
//   | INT { Int }
//   | INTEGER { Integer }
//   | INTERVAL interval = interval_field? l = type_length? { Interval(interval, l) }
//   | NCHAR VARYING? l = type_length? { Nchar(l) }
//   | NUMERIC p = precision_param? { Numeric(p) }
//   | REAL { Real }
//   | SMALLINT { SmallInt }
//   | TEXT { Text }
//   (* | TIME l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIME l = type_length? WITH TIME ZONE { TimeTz(l) }
//   | TIME l = type_length? WITHOUT TIME ZONE { Time(l) }
//   (* | TIMESTAMP l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIMESTAMP l = type_length? WITH TIME ZONE { TimestampTz(l) }
//   | TIMESTAMPTZ l = type_length? { TimestampTz(l) }
//   | TIMESTAMP l = type_length? WITHOUT TIME ZONE { Timestamp(l) }
//   | VARCHAR l = type_length? { VarChar(l) }
//   (* | schema_qualified_name_nontype (LEFT_PAREN vex (COMMA vex)* RIGHT_PAREN)? *)
    // TODO(chrde): moar types!!
    predefined_types: $ => choice(
      seq(kw("numeric"), optional($.precision))
    ),

    precision: $ => seq("(", $.number, optional(seq(",", $.number)), ")"),

    string: $ => seq(
      "'",
      repeat(choice(
        prec(1, /''/),
        prec(2, /[^']/),
      )),
       "'",
    ),

    // NOTE(chrde): taken from https://github.com/tree-sitter/tree-sitter-javascript/blob/1ddbf1588c353edab37791cdcc9f17e56fb4ea73/grammar.js#L899
    _value_expression: $ => choice(
      $.number,
      $.dollar_quote_string,
      $.string,
      $.true,
      $.false,
      $.null,
      $.star,
      seq("(", $.select_statement, ")"),
      seq("(", commaSep1($._value_expression), ")"),
      $.function_call,
      $.array_constructor,
      $.op_expression,
      $.time_expression,
      // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
      seq($.identifier, ".", $.star),
      $.identifier,
    ),

    time_expression: $ => choice(
      seq($.identifier, kw("at"), kw("time"), kw("zone"), $._value_expression),
      // TODO(chrde): this is plain wrong - https://www.postgresql.org/docs/13/datatype-datetime.html
      seq(kw("interval"), $.string, optional($._interval_fields)),
    ),

    _interval_fields: $ => choice(
      kw("year"), kw("month"), kw("day"), kw("hour"), kw("minute"), kw("second"),
      seq(kw("year"), kw("to"), kw("month")),
      seq(kw("day"), kw("to"), kw("hour")),
      seq(kw("day"), kw("to"), kw("minute")),
      seq(kw("day"), kw("to"), kw("second")),
      seq(kw("hour"), kw("to"), kw("minute")),
      seq(kw("hour"), kw("to"), kw("second")),
      seq(kw("minute"), kw("to"), kw("second")),
    ),

    function_call: $ => seq(
      $.identifier,
      "(",
      choice(
        $.select_statement,
        commaSep($._value_expression),
      ),
      ")"
    ),

    op_expression: $ => choice(
      prec.left(12, seq($._value_expression, $.cast, $._type)),
      // array access
      prec.right(10, seq(choice($.minus, $.plus), $._value_expression)),
      // ^
      prec.left(8, seq($._value_expression, choice("*", "/", "%"), $._value_expression,)),
      prec.left(7, seq($._value_expression, choice("-", "+"), $._value_expression,)),
      prec.left(6, seq($._value_expression, $.other_op, $._value_expression)),
      prec.left(5, seq($._value_expression, $.contains_op, $._value_expression,)),
      prec.left(4, seq($._value_expression, $.comparison_op, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_kw, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_null)),
      prec.right(2, seq($.not, $._value_expression)),
      prec.left(1, seq($._value_expression, choice($.and, $.or), $._value_expression,)),
    ),

    _list_of_identifiers: $ => seq("(", commaSep($.identifier), ")"),

    // TODO(chrde): https://www.postgresql.org/docs/13/sql-syntax-lexical.html
    comparison_op: $ => choice("<", ">", "=", "<=", ">=", "<>", "!="),
    // TODO(chrde): is there a better name other than `contains_op`?
    star: $ => "*",
    number: $ => /-?\d+/,
    identifier: $ => $._identifier,
    _identifier: $ => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  }
});
